@@ -26,6 +26,7 @@ from collections import defaultdict
 import sys
 import os
 import os.path
+import re
 import logging
 
 from . import task
@@ -56,7 +57,7 @@ def invalidate(store, options):
     '''
     invalidate(store, options)
 
-    Implement 'invalidate' command
+    Implements 'invalidate' command
 
     Parameters
     ----------
@@ -68,13 +69,22 @@ def invalidate(store, options):
     invalid_name = options.invalid_name
     tasks = task.alltasks
     cache = {}
+    if re.match( r'/.*?/', invalid_name):
+        # Looks like a regular expression
+        invalidate_re = re.compile( invalid_name.strip('/') )
+    elif '.' in invalid_name:
+        # Looks like a full task name
+        invalidate_re = invalid_name.replace('.','\\.' )
+    else:
+        # A bare function name perhaps?
+        invalidate_re = re.compile(r'\.' + invalid_name )
     def isinvalid(t):
         if isinstance(t, task.Tasklet):
             return isinvalid(t.base)
         h = t.hash()
         if h in cache:
             return cache[h]
-        if t.name == invalid_name:
+        if re.search( invalidate_re, t.name ):
             cache[h] = True
             return True
         for dep in t.dependencies():
