@@ -2,6 +2,7 @@ version 0.9.2+
 	* Fix parsing of ports on redis URL (patch by Alcides Viamontes)
 	* Make hashing robust to different orders when using randomized hashing
 	(patch by Alcides Viamontes)
+	* Allow regex in invalidate command (patch by Alcides Viamontes)
 
 version 0.9.2 Sun Nov 4 2012 by luispedro
 	* More flexible mapreduce()/map() functions
